<resources>
    <string name="app_name">Visible</string>
    <string name="app_name_separated">V I S I B L E</string>
    <string name="create_an_account">Create an account</string>
    <string name="not_have_an_account">Don\'t have an account?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="otp_code">Activation code</string>
    <string name="image_upload">Upload photo</string>
    <string name="name">Full name</string>
    <string name="birthday">Date of birth</string>
    <string name="dayOfWeek">Day</string>
    <string name="month">Month</string>
    <string name="gender">Gender</string>
    <string name="year">Year</string>
    <string name="register">Sign up</string>
    <string name="phone">Phone</string>
    <string name="already_have_an_account">Have an account?</string>
    <string name="login_into_account">Sign into account</string>
    <string name="about_us">About us</string>
    <string name="version_code">version 1.9</string>
    <string name="developer">Developer : Mohammad Jalili Torkamani</string>
    <string name="about_us_content">an AI based app helps you detect and find your desired objects!</string>
    <string name="gmail_value">mohammad.jalili.torkamani@gmail.com</string>
    <string name="donate_us">Donate us</string>
    <string name="save">Save</string>
    <string name="enter_full_name">Enter your name</string>
    <string name="current_features">Your bubbles</string>
    <string name="newest">Newest bubbles</string>
    <string name="linked_in_value">\@Mohammad_Jalili_Torkamani</string>
    <string name="general">General</string>
    <string name="open_source_licences">Open source libraries</string>
    <string name="contact_us">Contact us</string>
    <string name="setting">Setting</string>
    <string name="legal_policy">Privacy and policy</string>
    <string name="log_out_account">Logout</string>
    <string name="bubble_menu">Bubble store</string>
    <string name="share_app">Share app</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="contact_lexin">Contact visible</string>
    <string name="send_via">send via</string>
    <string name="install_email_client">Install email client first</string>
    <string name="control_input_fields">Check input fields</string>
    <string name="wrong_information">Wrong information</string>
    <string name="contact_developer">Contact developer</string>
    <string name="saved">Saved</string>
    <string name="share_app_prefix">Hi! I\'m here to declare a new type of application using AI !  get more info at </string>
    <string name="are_you_sure_to_loog_out">Are you sure to log out ?</string>
    <string name="play_detect_sound">Sound effect</string>
    <string name="sign_in">Sign in</string>
    <string name="more_apps">More apps</string>
    <string name="select_bubble">Select bubble</string>
    <string name="download">Download</string>
    <string name="password_min_8_digit">Password ( 8 digits at least)</string>
    <string name="donate_text">In order to get information about how to donate us, have contact with our team via email addresses sumbitted to store or this app</string>
    <string name="purchase_not_supported">Payment methods not supported</string>
    <string name="recover_password">Recover password</string>

    <string name="recover">recover</string>
    <string name="confidence_factor">Confidence factor</string>
    <string name="detection">Detection</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
