<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    android:layoutDirection="ltr"
    android:paddingTop="32dp"
    android:paddingBottom="4dp"
    tools:context=".view.fragment.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/fragment_login_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_icon"
            app:layout_constraintBottom_toTopOf="@+id/fragment_login_username"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <dev.aban.visible.utils.custom_view.EditTextPlus
            android:id="@+id/fragment_login_username"
            android:layout_width="0dp"
            android:layout_height="@dimen/normal_button_height"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="12dp"
            android:background="@color/light_gray"
            android:gravity="center_vertical|left"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLength="24"
            android:maxLines="1"
            android:paddingLeft="@dimen/normal_button_padding"
            android:paddingRight="@dimen/normal_button_padding"
            android:textSize="14sp"
            app:customFont_et="SF-Pro-Display-Thin.otf"
            app:layout_constraintBottom_toTopOf="@id/fragment_login_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <dev.aban.visible.utils.custom_view.EditTextPlus
            android:id="@+id/fragment_login_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/normal_button_height"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="12dp"
            android:background="@color/light_gray"
            android:gravity="center_vertical|left"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="24"
            android:maxLines="1"
            android:paddingLeft="@dimen/normal_button_padding"
            android:paddingRight="@dimen/normal_button_padding"
            android:textSize="14sp"
            app:customFont_et="SF-Pro-Display-Thin.otf"
            app:layout_constraintBottom_toTopOf="@id/fragment_login_btn_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/fragment_login_btn_container"
            android:layout_width="0dp"
            android:layout_height="@dimen/normal_button_height"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/login_accent_round_color"
            app:layout_constraintBottom_toTopOf="@+id/fragment_login_create_account_question"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <dev.aban.visible.utils.custom_view.TextViewPlus
                android:id="@+id/fragment_login_btn_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <ProgressBar
                android:id="@+id/fragment_login_login_pb"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:indeterminateTint="@android:color/white"
                android:visibility="gone" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <dev.aban.visible.utils.custom_view.TextViewPlus
            android:id="@+id/fragment_login_recover_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginRight="10dp"
            android:fontFamily="SF-Pro-Display-Thin.otf"
            android:gravity="center"
            android:paddingLeft="4dp"
            android:paddingTop="2dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp"
            android:text="@string/recover_password"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:bold="true"
            app:layout_constraintRight_toRightOf="@id/fragment_login_btn_container"
            app:layout_constraintTop_toBottomOf="@id/fragment_login_btn_container"
            app:underline="true" />

        <dev.aban.visible.utils.custom_view.TextViewPlus
            android:id="@+id/fragment_login_create_account_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_have_an_account"
            android:textColor="@android:color/black"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/fragment_login_create_account"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <dev.aban.visible.utils.custom_view.TextViewPlus
            android:id="@+id/fragment_login_create_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="SF-Pro-Display-Thin.otf"
            android:gravity="center"
            android:paddingLeft="4dp"
            android:paddingTop="2dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp"
            android:text="@string/create_an_account"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:bold="true"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:underline="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>