<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layoutDirection="ltr"
    tools:context=".view.fragment.ProfileFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/fragment_profile_toolbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/toolbar_color"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <dev.aban.visible.utils.custom_view.TextViewPlus
            android:id="@+id/fragment_profile_top_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/toolbar_content_color"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/fragment_profile_back"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|left"
            android:padding="17dp"
            android:src="@drawable/ic_back_black" />

        <dev.aban.visible.utils.custom_view.TextViewPlus
            android:id="@+id/fragment_profile_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="16dp"
            android:padding="6dp"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:bold="true" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_profile_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/fragment_profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@color/light_gray"
                app:civ_border_color="@color/borders_color"
                app:civ_border_width="0.3dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_profile_toolbar" />


            <dev.aban.visible.utils.custom_view.TextViewPlus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="32dp"
                android:text="@string/phone"
                android:textColor="@android:color/black"
                android:textSize="13sp"
                app:bold="true" />

            <dev.aban.visible.utils.custom_view.TextViewPlus
                android:id="@+id/fragment_profile_phone_value"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginTop="12dp"
                android:background="@color/light_gray"
                android:gravity="center_vertical|left"
                android:hint="enter your phone"
                android:maxLines="1"
                android:paddingLeft="@dimen/normal_button_padding"
                android:paddingRight="@dimen/normal_button_padding"
                android:textSize="13sp" />

            <dev.aban.visible.utils.custom_view.TextViewPlus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="24dp"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="13sp"
                app:bold="true" />

            <dev.aban.visible.utils.custom_view.EditTextPlus
                android:id="@+id/fragment_profile_full_name_value"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:background="@color/light_gray"
                android:hint="@string/enter_full_name"
                android:paddingLeft="@dimen/normal_button_padding"
                android:paddingRight="@dimen/normal_button_padding"
                android:textSize="13sp" />

            <dev.aban.visible.utils.custom_view.TextViewPlus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="16dp"
                android:text="@string/birthday"
                android:textColor="@android:color/black"
                android:textSize="13sp"
                app:bold="true" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_button_height"
                android:layout_marginTop="12dp">

                <dev.aban.visible.utils.custom_view.EditTextPlus
                    android:id="@+id/fragment_profile_birthday_day"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:background="@color/light_gray"
                    android:gravity="center"
                    android:hint="@string/dayOfWeek"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:minWidth="90dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <dev.aban.visible.utils.custom_view.EditTextPlus
                    android:id="@+id/fragment_profile_birthday_month"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:background="@color/light_gray"
                    android:gravity="center"
                    android:hint="@string/month"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:minWidth="90dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/fragment_profile_birthday_day"
                    app:layout_constraintRight_toLeftOf="@+id/fragment_profile_birthday_year"
                    app:layout_constraintTop_toTopOf="parent" />

                <dev.aban.visible.utils.custom_view.EditTextPlus
                    android:id="@+id/fragment_profile_birthday_year"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:background="@color/light_gray"
                    android:gravity="center"
                    android:hint="@string/year"
                    android:inputType="number"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:minWidth="90dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <ir.tapsell.sdk.bannerads.TapsellBannerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                app:tapsell_banner_type="banner_320x50"
                app:tapsell_zone_id="5e610b9e1481a9000164b854" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>