<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layoutDirection="ltr"
    tools:context=".view.fragment.AboutFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/fragment_about_toolbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/toolbar_color"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <dev.aban.visible.utils.custom_view.TextViewPlus
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/about_us"
            android:textColor="@color/toolbar_content_color"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/fragment_about_back"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|right"
            android:padding="17dp"
            android:scaleX="-1"
            android:src="@drawable/ic_back_black" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_about_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:id="@+id/fragment_about_top_logo_infos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="32dp"
                    android:src="@drawable/ic_icon" />

                <dev.aban.visible.utils.custom_view.TextViewPlus
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/app_name"
                    android:textSize="15sp"
                    app:bold="true" />

                <dev.aban.visible.utils.custom_view.TextViewPlus
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:text="@string/version_code"
                    android:textColor="@color/medium_gray"
                    android:textSize="12sp"
                    app:bold="true" />

            </LinearLayout>

            <dev.aban.visible.utils.custom_view.TextViewPlus
                android:id="@+id/fragment_about_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:gravity="right"
                android:lineSpacingExtra="5dp"
                android:text="@string/about_us_content"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />


            <dev.aban.visible.utils.custom_view.TextViewPlus
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:text="@string/developer" />

            <View
                android:layout_width="260dp"
                android:layout_height="2dp"
                android:layout_gravity="right"
                android:layout_marginTop="14dp"
                android:background="@android:color/black" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/fragment_about_google_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_gmail"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <dev.aban.visible.utils.custom_view.TextViewPlus
                    android:id="@+id/fragment_about_google_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="جیمیل : "
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/fragment_about_google_image"
                    app:layout_constraintRight_toLeftOf="@+id/fragment_about_google_image"
                    app:layout_constraintTop_toTopOf="@+id/fragment_about_google_image" />

                <dev.aban.visible.utils.custom_view.TextViewPlus
                    android:id="@+id/fragment_about_gmail_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:maxLines="1"
                    android:text="@string/gmail_value"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp"

                    app:layout_constraintBottom_toBottomOf="@+id/fragment_about_google_label"
                    app:layout_constraintRight_toLeftOf="@+id/fragment_about_google_label"
                    app:layout_constraintTop_toTopOf="@+id/fragment_about_google_label" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/fragment_about_linkedin_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_linkedin_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <dev.aban.visible.utils.custom_view.TextViewPlus
                    android:id="@+id/fragment_about_linkedin_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="لینکدین : "
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/fragment_about_linkedin_image"
                    app:layout_constraintRight_toLeftOf="@+id/fragment_about_linkedin_image"
                    app:layout_constraintTop_toTopOf="@+id/fragment_about_linkedin_image" />

                <dev.aban.visible.utils.custom_view.TextViewPlus
                    android:id="@+id/fragment_about_linkedin_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/linked_in_value"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp"

                    app:layout_constraintBottom_toBottomOf="@+id/fragment_about_linkedin_label"
                    app:layout_constraintRight_toLeftOf="@+id/fragment_about_linkedin_label"
                    app:layout_constraintTop_toTopOf="@+id/fragment_about_linkedin_label" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ir.tapsell.sdk.bannerads.TapsellBannerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                app:tapsell_banner_type="banner_320x50"
                app:tapsell_zone_id="5e6109801481a9000164b84a" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>