<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context=".view.fragment.MarketFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/toolbar_color"
        android:paddingTop="3dp"
        android:paddingBottom="3dp">

        <dev.aban.visible.utils.custom_view.TextViewPlus
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/bubble_menu"
            android:textColor="@color/toolbar_content_color"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/fragment_market_back"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|left"
            android:padding="17dp"
            android:src="@drawable/ic_back_black" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <dev.aban.visible.utils.custom_view.TextViewPlus
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="16dp"
        android:text="@string/current_features"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:bold="true" />

    <View
        android:layout_width="180dp"
        android:layout_height="2dp"
        android:layout_gravity="left"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="16dp"
        android:background="@android:color/black" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_market_current_bubbles_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:visibility="visible" />

    <dev.aban.visible.utils.custom_view.TextViewPlus
        android:id="@+id/fragment_market_current_bubbles_rv_empty"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="18dp"
        android:background="@color/light_gray"
        android:gravity="center"
        android:text="Empty !"
        android:textColor="@android:color/darker_gray"
        android:visibility="gone" />

    <dev.aban.visible.utils.custom_view.TextViewPlus
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:text="@string/newest"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:bold="true" />

    <View
        android:layout_width="180dp"
        android:layout_height="2dp"
        android:layout_gravity="left"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="16dp"
        android:background="@android:color/black" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_market_sell_bubbles_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="16dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:visibility="visible" />

    <dev.aban.visible.utils.custom_view.TextViewPlus
        android:id="@+id/fragment_market_sell_bubbles_rv_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="16dp"
        android:background="@color/light_gray"
        android:gravity="center"
        android:text="Empty !"
        android:textColor="@android:color/darker_gray"
        android:visibility="gone" />

</LinearLayout>